--- a/chicago/app/views/places/show.html.erb
+++ b/chicago/app/views/places/show.html.erb
@@ -1,32 +1,8 @@
-<style>
-  h2 {
-    color: white;
-    background: #006;
-    padding: 6px;
-    text-align: center;
-  }
-  .price {
-    color: green;
-    border: solid 3px green;
-    padding: 4px;
-  }
-  img {
-    float: left;
-    margin-right: 40px;
-    box-shadow: 8px 8px 4px gray;
-    height: "200px";
-  }
-  p {
-    margin-top: 24px;
-    margin-bottom: 24px;
-  }
-</style>
-
 <h2><%= @place.title %></h2>
 
 <p>
   <span class="price">Admission Price: <%= number_to_currency @place.price/100 %></span>
-  <%= link_to "Edit", "/places/#{@place.id}/edit" %>
+  <%= link_to "Edit", edit_place_path %>
 </p>
 
 <div>
@@ -37,7 +13,7 @@
 <h3 style="clear:both; margin-top: 100px">Reviews</h3>
 
 <p>Write a review</p>
-<form action="/reviews/<%= @place.id %>/submit_new">
+<%= form_tag "#{@place.id}/reviews/" do %>
   <select name="rating">
     <option>5 star</option>
     <option>4 star</option>
@@ -47,7 +23,7 @@
   </select>
   <input name="desc" size="50">
   <button>Submit</button>
-</form>
+<% end %>
 
 <% Review.where(place_id: @place.id).order('id desc').each do |review| %>
   <p>
