--- a/chicago/app/views/places/index.html.erb
+++ b/chicago/app/views/places/index.html.erb
@@ -1,11 +1,4 @@
-<style>
-  h1 {
-    border-bottom: solid 3px gray;
-    margin-bottom: 24px;
-  }
-</style>
-
-<p><%= link_to "Add a New Place", "/places/new" %></p>
+<p><%= link_to "Add a New Place", new_place_path %></p>
 
 <ul>
 
@@ -13,7 +6,7 @@
     <li>
       <%= link_to place.title, "/places/#{place.id}" %>
       (<%= number_to_currency(place.price / 100) %>)
-      <%= link_to "(delete)", "/places/#{place.id}/delete" %>
+      <%= link_to "Delete", "/places/#{place.id}", :method => 'delete' %>
     </li>
   <% end %>
 
